--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - MAX_TOTAL_SIZE=52428800 # Максимальный общий размер
       - FILE_TTL=600 # Время жизни файлов в хранилище
       - CLEANUP_INTERVAL=300 # Интервал очистки хранилища
-      - ALLOWED_ORIGINS=* # Разрешенные origins
+      - ALLOWED_ORIGINS=http://localhost:3001,http://172.19.0.3:3001,http://127.0.0.1:3001 # Разрешенные origins
     restart: unless-stopped # Автоматически перезапускаться при падении
 
   # Сервис для разработки фронта
@@ -22,7 +22,7 @@ services:
       - ./frontend:/app # Монтирование кода фронта
     ports:
       - "3001:3001" # Порт для разработки фронта
-    command: sh -c "npm install && npx @tailwindcss/cli -i ./input.css -o ./style.css --watch & npx http-server -p 3001 -a 0.0.0.0 --verbose" # Устанавка зависимостей + запуск в dev-mode
+    command: sh -c "npm install && npx @tailwindcss/cli -i ./input.css -o ./style.css --watch & npx http-server -p 3001 -P http://backend:8080 --proxy http://localhost:3001?" # Устанавка зависимостей + запуск в dev-mode
     environment:
       - HOST=0.0.0.0 # Разрешить доступ с любого хоста
     healthcheck:
